fix paragraph spacing in posts

--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -211,6 +211,10 @@ ul {
   padding: 0;
 }
 
+.post-content p {
+  margin-bottom: 1em;
+}
+
 a,
 .author {
   color: var(--link-color);
